
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int die (char*) ;
 scalar_t__ link (char const*,char*) ;
 int mkdir (char*,int) ;

int setup_chroot(const char *me)
{
 mkdir("chroot", 0755);
 mkdir("chroot/lib64", 0755);
 mkdir("chroot/bin", 0755);

 if (link(me, "chroot/lib64/ld-linux-x86-64.so.2") < 0)
  die("[-] link");
 if (link("/bin/su", "chroot/bin/su") < 0)
  die("[-] link");
 return 0;
}
