; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_38390.c_setup_chroot.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_38390.c_setup_chroot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"chroot\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"chroot/lib64\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"chroot/bin\00", align 1
@.str.3 = private unnamed_addr constant [34 x i8] c"chroot/lib64/ld-linux-x86-64.so.2\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"[-] link\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"/bin/su\00", align 1
@.str.6 = private unnamed_addr constant [14 x i8] c"chroot/bin/su\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setup_chroot(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 @mkdir(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 493)
  %4 = call i32 @mkdir(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 493)
  %5 = call i32 @mkdir(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i32 493)
  %6 = load i8*, i8** %2, align 8
  %7 = call i64 @link(i8* %6, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.3, i64 0, i64 0))
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = call i32 @die(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %1
  %12 = call i64 @link(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.6, i64 0, i64 0))
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %11
  %15 = call i32 @die(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %11
  ret i32 0
}

declare dso_local i32 @mkdir(i8*, i32) #1

declare dso_local i64 @link(i8*, i8*) #1

declare dso_local i32 @die(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
